--- a/app/src/main/res/layout/fragment_reader.xml
+++ b/app/src/main/res/layout/fragment_reader.xml
@@ -35,7 +35,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="com.raywenderlich.android.majesticreader.presentation.MainActivity">
+              tools:context="com.raywenderlich.android.majesticreader.com.majesticreader.presentation.MainActivity">
 
   <com.github.chrisbanes.photoview.PhotoView
       android:id="@+id/iv_page"
