--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -36,7 +36,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.majesticreader.presentation.SplashActivity">
+    tools:context="com.majesticreader.presentation.ui.SplashActivity">
 
   <ImageView
       android:id="@+id/imageView"
