--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -35,7 +35,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.majesticreader.presentation.MainActivity">
+    tools:context="com.majesticreader.presentation.ui.MainActivity">
 
   <com.google.android.material.appbar.AppBarLayout
       android:layout_width="match_parent"
