--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,7 +37,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.majesticreader.presentation.MainActivity"
+    tools:context="com.majesticreader.presentation.ui.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
