--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -35,7 +35,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.majesticreader.presentation.library.LibraryFragment">
+    tools:context=".presentation.ui.library.LibraryFragment">
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/documentsRecyclerView"
